#9688 scroll margin issue on small screens

--- a/public/less/frontend/components/feature-list-v6.less
+++ b/public/less/frontend/components/feature-list-v6.less
@@ -11,6 +11,9 @@
                 padding-bottom:10px;
                 white-space:nowrap;
                 overflow: auto;
+                padding:0;
+                margin-left: 15px;
+                margin-right: 15px;
             }
     		
     		list-style: none;
@@ -71,6 +74,9 @@
 					opacity: 1;
 				}				
 			}
+			li:last-child{
+				padding-right: 0;
+			} 
 		}
 	}
 }
